Исправляет макет под пиксель перфект

--- a/catalog.html
+++ b/catalog.html
@@ -92,7 +92,7 @@
                     </fieldset >
 
                     <fieldset class="catalog-filter-group radio-group">
-                        <legend class="catalog-filter-title">Тип жилья:</legend>
+                        <legend class="catalog-filter-title">Тип Жилья:</legend>
                         <label class="control-caption">
                             <input class="control-input visually-hidden reset-input" type="radio" name="product-group" value="hotel" id="hotel"  checked>
                             <span class="control-mark"></span>
@@ -217,7 +217,7 @@
                       <button class="hotels-button" type="button">В избранное</button>
                     </div>
                     <div class="hotels-container">
-                      <span class="hotels-stars four-stars"></span>
+                      <span class="hotels-stars three-stars"></span>
                       <span class="hotels-rating">Рейтинг: 6,9</span>
                     </div>
                   </div>
