--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <img class="hero-background-gorgeous" src="images/main-title.svg" width="458" height="352" alt="Добро пожаловать в Седону.">
       </div>
       </div>
-       <section class="description">
-        <h1 class="description-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h1>
+       <section class="description ">
+        <h1 class="description-title reset-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h1>
         <p class="description-reasons reset-paragraph">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
 
@@ -71,20 +71,20 @@
         <ul class="advantages-list reset-list">
             <li class="advantages-item colored-text advantages-item-smaller">
               <h3 class="advantages-title reset-title">Настоящий городок</h3>
-               <p class="advatages-description colored-text reset-paragraph">№1 Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+               <p class="advatages-description colored-text reset-paragraph">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
             <li class="advantages-item wide-element">
                 <img class="advantages-image" src="images/bg-advantages1.jpg" width="800" height="384" alt="Двухэтажный котеджный домик под названием 'Open Range' на фоне гор.">
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item line-after">
               <h3 class="advantages-title reset-title">Небольшая площадь</h3>
               <p class="advatages-description reset-paragraph">Все достопримечательности находятся очень близко</p>
             </li>
-            <li class="advantages-item color-change">
+            <li class="advantages-item color-change line-after">
               <h3 class="advantages-title reset-title">Красивая<br> дорога</h3>
               <p class="advatages-description reset-paragraph">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item line-after">
               <h3 class="advantages-title reset-title">Мало<br> туристов</h3>
               <p class="advatages-description reset-paragraph">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
@@ -92,7 +92,7 @@
                <img class="advantages-image" src="images/bg-advantages2.jpg" width="800" height="384" alt="Прекрасный вид на каньон. Внутри которого находятся зеленые деревья.">
             </li>
             <li class="advantages-item colored-text advantages-item-smaller">
-              <h3 class="advantages-title reset-title">Там есть мост дьявола</h3>
+              <h3 class="advantages-title reset-title">Там есть<br> мост дьявола</h3>
               <p class="advatages-description colored-text reset-paragraph">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </li>
         </ul>
@@ -185,7 +185,7 @@
             method="post"
           >
             <div class="form-row">
-              <label class="form-label" for="start-date"> Дата заезда: </label>
+              <label class="form-label" for="start-date"> Дата Заезда: </label>
               <input
                 class="modal-input modal-input-date"
                 type="text"
@@ -199,7 +199,7 @@
               </p>
             </div>
             <div class="form-row">
-              <label class="form-label" for="end-date"> Дата выезда: </label>
+              <label class="form-label" for="end-date"> Дата Выезда: </label>
               <input
                 class="modal-input modal-input-date"
                 type="text"
